[package]
name = "escrow-engine"
version = "0.1.0"
description = "Production-grade escrow system on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "~1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"